--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
                       <div class="col-md-6">
                      	
                      
-                        <a href="https://www.facebook.com/ksfilmsok/" class="fa fa-facebook-square"></a>
-                        <a href="https://twitter.com/ksfilms1" class="fa fa-twitter"></a>
-                         <a href="https://www.instagram.com/kramersigmanfilms/" class="fa fa-instagram"></a>
-                         <a href="https://www.youtube.com/channel/UClLgDbCF1cY9eG0mc8mVEtg" class="fa fa-youtube"></a>
-                        <a href="http://www.imdb.com/company/co0393274/" class="fa fa-imdb"></a>
+                        <a target="_blank" href="https://www.facebook.com/ksfilmsok/" class="fa fa-facebook-square"></a>
+                        <a target="_blank"  href="https://twitter.com/ksfilms1" class="fa fa-twitter"></a>
+                         <a target="_blank"  href="https://www.instagram.com/kramersigmanfilms/" class="fa fa-instagram"></a>
+                         <a target="_blank"  href="https://www.youtube.com/channel/UClLgDbCF1cY9eG0mc8mVEtg" class="fa fa-youtube"></a>
+                        <a target="_blank"  href="http://www.imdb.com/company/co0393274/" class="fa fa-imdb"></a>
                         </div>
                      </div>
                   </section>
